--- a/websocket/websocket.html
+++ b/websocket/websocket.html
@@ -6,11 +6,57 @@
     </head>
     <body>
         <div class="game">
+            <div class="hands">
+                <div class="hand">
+                    <span class="title"> Blue </span>
+                    <div class="slot">
+                        <div class="card blank"> <div class="back"> </div> <div class="front spade"> A </div> </div>
+                    </div>
+                    <div class="slot">
+                        <div class="card blank"> <div class="back"> </div> <div class="front spade"> A </div> </div>
+                    </div>
+                </div>
+                <div class="hand">
+                    <span class="title"> Red </span>
+                    <div class="slot">
+                        <div class="card blank"> <div class="back"> </div> <div class="front spade"> A </div> </div>
+                    </div>
+                    <div class="slot">
+                        <div class="card blank"> <div class="back"> </div> <div class="front spade"> A </div> </div>
+                    </div>
+                </div>
+            </div>
             <div class="table">
-                <div class="card spade"> A </div>
-                <div class="card diamond"> 2 </div>
-                <div class="card blank"> </div>
-                <div class="card back">  </div>
+                <div class="slot">
+                    <div class="card blank"> <div class="back"> </div> <div class="front spade"> A </div> </div>
+                </div>
+                <div class="slot">
+                    <div class="card blank"> <div class="back"> </div> <div class="front spade"> A </div> </div>
+                </div>
+                <div class="slot">
+                    <div class="card blank"> <div class="back"> </div> <div class="front spade"> A </div> </div>
+                </div>
+                <div class="slot">
+                    <div class="card blank"> <div class="back"> </div> <div class="front spade"> A </div> </div>
+                </div>
+                <div class="slot">
+                    <div class="card blank"> <div class="back"> </div> <div class="front spade"> A </div> </div>
+                </div>
+                <div class="deck">
+                    <div class="card"> <div class="back"> </div> <div class="front spade"> A </div> </div>
+                </div>
+            </div>
+
+            <div class="hands">
+                <div class="hand">
+                    <span class="title"> You </span>
+                    <div class="slot">
+                        <div class="card blank"> <div class="back"> </div> <div class="front spade"> A </div> </div>
+                    </div>
+                    <div class="slot">
+                        <div class="card blank"> <div class="back"> </div> <div class="front spade"> A </div> </div>
+                    </div>
+                </div>
             </div>
 
             <ul id="log"></ul>
