--- a/websocket-client/index.html
+++ b/websocket-client/index.html
@@ -1,70 +1,39 @@
 <!DOCTYPE html>
-<html   lang="pl">
+<html lang="pl">
     <head>
-        <title>Texas Holdem</title>
-        <link rel="stylesheet" type="text/css" href="css/websocket.css">
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title> Texas Holdem </title>
+
+        <meta name="description" content="Texas holdem by Wojciech Polak and Błażej Michalik" />
+
+        <link rel="canonical" href="localhost:7777" />
+        <link rel="stylesheet" type="text/css" href="css/websocket.css" />
     </head>
     <body>
-        <div class="game">
-            <div class="hands">
+        <div class="table">
+            <div class="opponents"> </div>
+            <div class="shared"> 
+                <div class="card-slot"></div>
+                <div class="card-slot"></div>
+                <div class="card-slot"></div>
+                <div class="card-slot"></div>
+                <div class="card-slot"></div>
+                <div class="deck"> </div>
+            </div>
+            <div class="player"> 
                 <div class="hand">
-                    <span class="title"> Blue </span>
-                    <div class="slot">
-                        <div class="card blank"> <div class="back"> </div> <div class="front spade"> A </div> </div>
-                    </div>
-                    <div class="slot">
-                        <div class="card blank"> <div class="back"> </div> <div class="front spade"> A </div> </div>
-                    </div>
-                </div>
-                <div class="hand">
-                    <span class="title"> Red </span>
-                    <div class="slot">
-                        <div class="card blank"> <div class="back"> </div> <div class="front spade"> A </div> </div>
-                    </div>
-                    <div class="slot">
-                        <div class="card blank"> <div class="back"> </div> <div class="front spade"> A </div> </div>
-                    </div>
+                    <div class="card-slot"></div>
+                    <div class="card-slot"></div>
                 </div>
             </div>
-            <div class="table">
-                <div class="slot">
-                    <div class="card blank"> <div class="back"> </div> <div class="front spade"> A </div> </div>
-                </div>
-                <div class="slot">
-                    <div class="card blank"> <div class="back"> </div> <div class="front spade"> A </div> </div>
-                </div>
-                <div class="slot">
-                    <div class="card blank"> <div class="back"> </div> <div class="front spade"> A </div> </div>
-                </div>
-                <div class="slot">
-                    <div class="card blank"> <div class="back"> </div> <div class="front spade"> A </div> </div>
-                </div>
-                <div class="slot">
-                    <div class="card blank"> <div class="back"> </div> <div class="front spade"> A </div> </div>
-                </div>
-                <div class="deck">
-                    <div class="card"> <div class="back"> </div> <div class="front spade"> A </div> </div>
-                </div>
-            </div>
-
-            <div class="hands">
-                <div class="hand">
-                    <span class="title"> You </span>
-                    <div class="slot">
-                        <div class="card blank"> <div class="back"> </div> <div class="front spade"> A </div> </div>
-                    </div>
-                    <div class="slot">
-                        <div class="card blank"> <div class="back"> </div> <div class="front spade"> A </div> </div>
-                    </div>
-                </div>
-            </div>
-
-            <ul id="log"></ul>
-
-            <form id="form">
-                <input type="text" id="text-input" autocomplete="off"/>
-                <input type="submit" value="send"/>
-            </form>
         </div>
-        <script data-main="app" src="lib/require.js" ></script>
+        <ul id="log"></ul>
+        <form id="form">
+            <input type="text" id="text-input" autocomplete="off" />
+            <input type="submit" value="SEND" />
+        </form>
+        <script data-main="app" src="lib/require.js"> </script>
+    </body>
 </html>
