--- a/websocket-client/index.html
+++ b/websocket-client/index.html
@@ -30,10 +30,10 @@
             </div>
         </div>
         <ul id="log"></ul>
-        <form id="form">
+        <div id="form">
             <input type="text" id="text-input" autocomplete="off" />
-            <input type="submit" value="SEND" />
-        </form>
+            <div class="commands"></div>
+        </div>
         <script data-main="app" src="lib/require.js"> </script>
     </body>
 </html>
