Event z wysyłaniem kart przeciwników - Showdown

--- a/websocket-client/index.html
+++ b/websocket-client/index.html
@@ -20,7 +20,7 @@
                 <div class="card-slot"></div>
                 <div class="card-slot"></div>
                 <div class="card-slot"></div>
-                <div class="deck"> </div>
+                <!--<div class="deck"> </div> -->
             </div>
             <div class="player"> 
                 <div class="hand">
