--- a/websocket-client/app/opponent.html
+++ b/websocket-client/app/opponent.html
@@ -1,7 +1,7 @@
 <div class="opponent">
     <div class="info"></div>
     <div class="hand">
-        <div class="card-slot blank"> </div>
-        <div class="card-slot blank"> </div>
+        <div class="card-slot"> </div>
+        <div class="card-slot"> </div>
     </div>
 </div>
