Domyslne argumenty dla wszystkich potrzebnych opcji

--- a/websocket-client/index.html
+++ b/websocket-client/index.html
@@ -12,6 +12,10 @@
         <link rel="stylesheet" type="text/css" href="css/websocket.css" />
     </head>
     <body>
+        <div id="login-form" class="visible">
+            <input type="text" id="address-input"/>
+            <button>Log in</button>
+        </div>
         <div class="table">
             <div class="opponents"> </div>
             <div class="shared"> 
@@ -23,6 +27,7 @@
                 <!--<div class="deck"> </div> -->
             </div>
             <div class="player"> 
+                <div class="bets">Bets</div>
                 <div class="hand">
                     <div class="card-slot"></div>
                     <div class="card-slot"></div>
